<!--
  ~ Copyright (c) 2016. David de Andrés and Juan Carlos Ruiz, DISCA - UPV, Development of apps for mobile devices.
  -->

<resources>
    <string name="app_name">L06.04_MaterialDesign</string>
    <!--Strings related to the MainActivity layout-->
    <string name="button_linear_vertical">LinearLayout Vertical</string>
    <string name="button_linear_horizontal">LinearLayout Horizontal</string>
    <string name="button_grid_vertical">Grid Vertical</string>
    <string name="button_grid_horizontal">Grid Horizontal</string>
    <string name="button_staggered_vertical">Staggered Vertical</string>
    <string name="button_staggered_horizontal">Staggered Horizontal</string>
    <!--Strings related to the RecyclerView layout-->
    <string name="message">FAB clicked!</string>
    <string name="fab_description">Display message</string>
    <string name="scroll">Scroll to start</string>
</resources>
