<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. David de Andrés and Juan Carlos Ruiz, DISCA - UPV, Development of apps for mobile devices.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="labs.sdm.l0604_materialdesign.activities.MainActivity">

    <!--Buttons that will launch the activity displaying the RecyclerView with a different LayoutManager-->
    <Button
        android:id="@+id/bLinearVertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="buttonClicked"
        android:text="@string/button_linear_vertical" />

    <Button
        android:id="@+id/bLinearHorizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="buttonClicked"
        android:text="@string/button_linear_horizontal" />

    <Button
        android:id="@+id/bGridVertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="buttonClicked"
        android:text="@string/button_grid_vertical" />

    <Button
        android:id="@+id/bGridHorizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="buttonClicked"
        android:text="@string/button_grid_horizontal" />

    <Button
        android:id="@+id/bStaggeredVertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="buttonClicked"
        android:text="@string/button_staggered_vertical" />

    <Button
        android:id="@+id/bStaggeredHorizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="buttonClicked"
        android:text="@string/button_staggered_horizontal" />

</LinearLayout>
